--- a/src/_includes/components/footer.njk
+++ b/src/_includes/components/footer.njk
@@ -2,6 +2,6 @@
   <p class="footer-text">
     Copyright &copy; 2012 - 2020. Contributors to
     <a href="https://github.com/doc22940/frontend-Developer-questions/blob/master/CONTRIBUTORS.md">Front-end-Developer-Interview-Questions.</a><br>
-    Curious about the project? <a href="{{ '/about/' | url }}">Read more about here</a>.
+    Curious? <a href="{{ '/about/' | url }}">Read more about here</a>.
   </p>
 </footer>
